sharded filemd5 command SERVER-935